--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
       href="https://www.pinclipart.com/picdir/middle/543-5431210_care2cure-physiotherapy-rehab-center-physiotherapist-physiotherapy-logo-png.png"
